--- a/pkg/api/spec/schemas/counters.yaml
+++ b/pkg/api/spec/schemas/counters.yaml
@@ -1,4 +1,10 @@
 type: object
+description: Counters stores the goProbe flow counters
+required:
+  - br
+  - bs
+  - pr
+  - ps
 properties:
   br:
     type: integer
