--- a/pkg/api/spec/schemas/labels.yaml
+++ b/pkg/api/spec/schemas/labels.yaml
@@ -1,4 +1,5 @@
 type: object
+description: Labels hold labels by which the goDB database is partitioned
 properties:
   timestamp:
     type: string
