--- a/pkg/api/spec/schemas/status.yaml
+++ b/pkg/api/spec/schemas/status.yaml
@@ -1,4 +1,7 @@
 type: object
+description: Status denotes the overall status of the result
+required:
+  - code
 properties:
   code:
     type: string
