--- a/pkg/api/spec/schemas/summary.yaml
+++ b/pkg/api/spec/schemas/summary.yaml
@@ -1,4 +1,11 @@
 type: object
+required:
+  - interfaces
+  - totals
+  - timings
+  - hits
+  - time_first
+  - time_last
 properties:
   interfaces:
     type: array
