--- a/pkg/api/spec/schemas/timings.yaml
+++ b/pkg/api/spec/schemas/timings.yaml
@@ -1,4 +1,8 @@
 type: object
+description: Timings summarizes query runtimes
+required:
+  - query_start
+  - query_duration_ns
 properties:
   query_start:
     type: string
