--- a/pkg/api/spec/schemas/row.yaml
+++ b/pkg/api/spec/schemas/row.yaml
@@ -1,9 +1,8 @@
-type: array
-items:
-  $ref: '#/Row'
-
-Row:
   type: object
+  description: Row is a human-readable, aggregatable representation of goDB's data
+  required:
+    - attributes
+    - counters
   properties:
     labels:
       $ref: './labels.yaml'
