--- a/pkg/api/goprobe/spec/paths/config.yaml
+++ b/pkg/api/goprobe/spec/paths/config.yaml
@@ -17,4 +17,4 @@ get:
       content:
         application/json:
           schema:
-            $ref: '../schemas/configresponse.yaml'
+            $ref: '../schemas/ConfigResponse.yaml'
