--- a/pkg/api/goprobe/spec/paths/status.yaml
+++ b/pkg/api/goprobe/spec/paths/status.yaml
@@ -8,4 +8,4 @@ get:
       content:
         application/json:
           schema:
-            $ref: '../schemas/statusresponse.yaml'
+            $ref: '../schemas/StatusResponse.yaml'
