--- a/pkg/api/goprobe/spec/schemas/CaptureConfig.yaml
+++ b/pkg/api/goprobe/spec/schemas/CaptureConfig.yaml
@@ -5,4 +5,4 @@ properties:
     description: Enable or disable promiscuous capture mode.
     example: true
   ring_buffer:
-    $ref: './ringbufferconfig.yaml'
+    $ref: './RingBufferConfig.yaml'
