--- a/pkg/api/goprobe/spec/schemas/ConfigUpdateRequest.yaml
+++ b/pkg/api/goprobe/spec/schemas/ConfigUpdateRequest.yaml
@@ -1,6 +1,6 @@
 type: object
 additionalProperties:
-  $ref: './captureconfig.yaml'
+  $ref: './CaptureConfig.yaml'
 example:
   eth0:
     promisc: true
