--- a/pkg/api/spec/responses/success.yaml
+++ b/pkg/api/spec/responses/success.yaml
@@ -2,4 +2,4 @@ description: Successful query
 content:
   application/json:
     schema:
-      $ref: '../schemas/result.yaml'
+      $ref: '../schemas/Result.yaml'
