--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -187,14 +187,23 @@ jobs:
     runs-on: ubuntu-latest
     container: node:20-alpine
     steps:
-        - name: Install swagger-cli
+        - name: Set environment
           run: |
-            npm install -g @apidevtools/swagger-cli
+            echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+            echo "SEM_VER=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+            echo "COMMIT_SHA=${GITHUB_SHA}" >> $GITHUB_ENV
+
+        - name: Check out code into the Go module directory
+          uses: actions/checkout@v3
+
+        - name: Install redocly
+          run: |
+            npm install -g @redocly/cli
 
         - name: Build single OpenAPI 3.0 spec file for all documented APIs
           run: |
-            swagger-cli bundle --type yaml --outfile ./goprobe_${{ env.RELEASE_VERSION }}_openapi.yaml ./pkg/api/goprobe/spec/openapi.yaml
-            swagger-cli bundle --type yaml --outfile ./global-query_${{ env.RELEASE_VERSION }}_openapi.yaml ./pkg/api/globalquery/spec/openapi.yaml
+            redocly bundle --output ./goprobe_${{ env.RELEASE_VERSION }}_openapi.yaml ./pkg/api/goprobe/spec/openapi.yaml
+            redocly bundle --output ./global-query_${{ env.RELEASE_VERSION }}_openapi.yaml ./pkg/api/globalquery/spec/openapi.yaml
 
         - name: Store artifacts
           uses: actions/upload-artifact@v3
