--- a/pkg/api/goprobe/spec/schemas/ConfigResponse.yaml
+++ b/pkg/api/goprobe/spec/schemas/ConfigResponse.yaml
@@ -5,7 +5,7 @@ properties:
   ifaces:
     type: object
     additionalProperties:
-      $ref: './captureconfig.yaml'
+      $ref: './CaptureConfig.yaml'
     example:
       eth0:
         promisc: true
