--- a/pkg/api/spec/schemas/_index.yaml
+++ b/pkg/api/spec/schemas/_index.yaml
@@ -1,29 +1,29 @@
 # request data
 Args:
-  $ref: './args.yaml'
+  $ref: './Args.yaml'
 DNSResolution:
-  $ref: './dnsresolution.yaml'
+  $ref: './DnsResolution.yaml'
 
 # response data
 Result:
-  $ref: './result.yaml'
+  $ref: './Result.yaml'
 Status:
-  $ref: './status.yaml'
+  $ref: './Status.yaml'
 HostsStatuses:
-  $ref: './hoststatuses.yaml'
+  $ref: './HostStatuses.yaml'
 Summary:
-  $ref: './summary.yaml'
+  $ref: './Summary.yaml'
 Query:
-  $ref: './query.yaml'
+  $ref: './Query.yaml'
 Timings:
-  $ref: './timings.yaml'
+  $ref: './Timings.yaml'
 Hits:
-  $ref: './hits.yaml'
+  $ref: './Hits.yaml'
 Row:
-  $ref: './row.yaml'
+  $ref: './Row.yaml'
 Counters:
-  $ref: './counters.yaml'
+  $ref: './Counters.yaml'
 Labels:
-  $ref: './labels.yaml'
+  $ref: './Labels.yaml'
 Attributes:
-  $ref: './attributes.yaml'
+  $ref: './Attributes.yaml'
