Add gpctl to CD / package build pipeline

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -34,6 +34,7 @@ jobs:
           GOOS=linux GOARCH=amd64 go build -a -tags jsoniter,slimcap_nomock -o goProbe -pgo=auto ./cmd/goProbe
           GOOS=linux GOARCH=amd64 go build -a -tags jsoniter -o global-query -pgo=auto ./cmd/global-query
           GOOS=linux GOARCH=amd64 go build -a -o goQuery -pgo=auto ./cmd/goQuery
+          GOOS=linux GOARCH=amd64 go build -a -o gpctl -pgo=auto ./cmd/gpctl
           GOOS=linux GOARCH=amd64 go build -a -o goConvert ./cmd/goConvert
 
       - name: Deploy artifacts
@@ -45,8 +46,9 @@ jobs:
           cp goProbe .debpkg/usr/local/bin/goProbe
           cp global-query .debpkg/usr/local/bin/global-query
           cp goQuery .debpkg/usr/local/bin/goQuery
+          cp gpctl .debpkg/usr/local/bin/gpctl
           cp goConvert .debpkg/usr/local/bin/goConvert
-          tar czf ./goprobe_${{ env.RELEASE_VERSION }}_debian_amd64.tar.gz goProbe global-query goQuery goConvert
+          tar czf ./goprobe_${{ env.RELEASE_VERSION }}_debian_amd64.tar.gz goProbe global-query goQuery gpctl goConvert
 
           # Config
           cp examples/config/goprobe-example-config.yaml .debpkg/etc/goprobe.conf.example
@@ -110,6 +112,7 @@ jobs:
           GOOS=linux GOARCH=amd64 go build -a -tags jsoniter,slimcap_nomock -o goProbe -pgo=auto ./cmd/goProbe
           GOOS=linux GOARCH=amd64 go build -a -tags jsoniter -o global-query -pgo=auto ./cmd/global-query
           GOOS=linux GOARCH=amd64 go build -a -o goQuery -pgo=auto ./cmd/goQuery
+          GOOS=linux GOARCH=amd64 go build -a -o gpctl -pgo=auto ./cmd/gpctl
           GOOS=linux GOARCH=amd64 go build -a -o goConvert ./cmd/goConvert
 
       - name: Deploy artifacts
@@ -121,8 +124,9 @@ jobs:
           cp goProbe .rpmpkg/usr/local/bin/goProbe
           cp global-query .rpmpkg/usr/local/bin/global-query
           cp goQuery .rpmpkg/usr/local/bin/goQuery
+          cp gpctl .rpmpkg/usr/local/bin/gpctl
           cp goConvert .rpmpkg/usr/local/bin/goConvert
-          tar czf ./goprobe_${{ env.RELEASE_VERSION }}_fedora_x86_64.tar.gz goProbe global-query goQuery goConvert
+          tar czf ./goprobe_${{ env.RELEASE_VERSION }}_fedora_x86_64.tar.gz goProbe global-query goQuery gpctl goConvert
 
           # Config
           cp examples/config/goprobe-example-config.yaml .rpmpkg/etc/goprobe.conf.example
@@ -170,11 +174,12 @@ jobs:
           GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -tags jsoniter,slimcap_nomock -o goProbe -pgo=auto ./cmd/goProbe
           GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -tags jsoniter -o global-query -pgo=auto ./cmd/global-query
           GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -o goQuery -pgo=auto ./cmd/goQuery
+          GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -o gpctl -pgo=auto ./cmd/gpctl
           GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -o goConvert ./cmd/goConvert
 
       - name: Deploy artifacts
         run: |
-          tar czf ./goprobe_${{ env.RELEASE_VERSION }}_alpine_x86_64.tar.gz goProbe global-query goQuery goConvert
+          tar czf ./goprobe_${{ env.RELEASE_VERSION }}_alpine_x86_64.tar.gz goProbe global-query goQuery gpctl goConvert
 
       - name: Store artifacts
         uses: actions/upload-artifact@v3
