--- a/pkg/api/spec/schemas/Result.yaml
+++ b/pkg/api/spec/schemas/Result.yaml
@@ -7,6 +7,10 @@ required:
   - query
   - rows
 properties:
+  hostname:
+    type: string
+    description: Hostname of the host that was queried
+    example: hostA
   status:
     $ref: './Status.yaml'
   hosts_statuses:
