--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,30 @@ on:
 
 jobs:
 
+  bench:
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          repository: els0r/goProbe
+          fetch-depth: 0
+      - uses: actions/setup-go@v3
+        with:
+          go-version: ^1.21
+      - uses: WillAbides/benchdiff-action@v0
+        with:
+          status_sha: ${{ github.sha }}
+          status_name: bench-result
+          status_on_degraded: neutral
+          benchdiff_args: |
+            --packages ./...
+            --cpu=1,2
+            --count=10
+            --warmup-count=1
+            --benchtime=1s
+            --tolerance=5
+
   build-linux:
     name: Build on Linux
     runs-on: ubuntu-latest
@@ -22,20 +46,6 @@ jobs:
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
-
-    - name: Benchmark
-      uses: WillAbides/benchdiff-action@v0.3.2
-      with:
-        status_sha: ${{ github.sha }}
-        status_name: benchmark-result
-        status_on_degraded: neutral
-        benchdiff_args: |
-          --packages ./...
-          --cpu=1,2
-          --count=10
-          --warmup-count=1
-          --benchtime=1s
-          --tolerance=5
 
     - name: Test
       run: |
@@ -62,4 +72,3 @@ jobs:
 
     - name: Build for AMD64 (No-GCO Mode)
       run: GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -tags jsoniter -v -a ./...
-
