OpenAPI spec update

--- a/pkg/api/globalquery/spec/schemas/_index.yaml
+++ b/pkg/api/globalquery/spec/schemas/_index.yaml
@@ -27,3 +27,7 @@ Labels:
   $ref: '../../../spec/schemas/Labels.yaml'
 Attributes:
   $ref: '../../../spec/schemas/Attributes.yaml'
+
+# info endpoints
+ServiceInfo:
+  $ref: '../../../spec/schemas/ServiceInfo.yaml'
