--- a/pkg/api/spec/schemas/_index.yaml
+++ b/pkg/api/spec/schemas/_index.yaml
@@ -27,3 +27,7 @@ Labels:
   $ref: './Labels.yaml'
 Attributes:
   $ref: './Attributes.yaml'
+
+# info endpoints
+ServiceInfo:
+  $ref: './ServiceInfo.yaml'
