--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -1,18 +1,13 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+name: CI Build / Test (Push)
 
 on:
-  - push
   - pull_request
 
 jobs:
 
   build-linux:
-    name: Build on Linux
+    name: Build / Test on Linux
     runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     steps:
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -22,6 +17,15 @@ jobs:
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
+
+    - name: Build for AMD64
+      run: GOOS=linux GOARCH=amd64 go build -tags jsoniter -v ./...
+
+    - name: Build for AMD64 (Production Mode)
+      run: GOOS=linux GOARCH=amd64 go build -tags jsoniter,slimcap_nomock -v ./...
+
+    - name: Build for AMD64 (No-GCO Mode)
+      run: GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -tags jsoniter -v ./...
 
     - name: Test
       run: |
@@ -40,11 +44,4 @@ jobs:
       run: |
         go test -tags jsoniter -race -v ./...
 
-    - name: Build for AMD64
-      run: GOOS=linux GOARCH=amd64 go build -tags jsoniter -v -a ./...
 
-    - name: Build for AMD64 (Production Mode)
-      run: GOOS=linux GOARCH=amd64 go build -tags jsoniter,slimcap_nomock -v -a ./...
-
-    - name: Build for AMD64 (No-GCO Mode)
-      run: GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -tags jsoniter -v -a ./...
