--- a/pkg/api/spec/schemas/MinBoundsError.yaml
+++ b/pkg/api/spec/schemas/MinBoundsError.yaml
@@ -2,6 +2,6 @@ type: object
 properties:
   val:
     type: string
-    example: "Value that is above the upper bounds"
+    example: "Value that is below the lower bounds"
   min:
-    $ref: './boundsError.yaml'
+    $ref: "./boundsError.yaml"
