--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
       "HTTP_PROXY": "${localEnv:HTTP_PROXY}",
       "HTTPS_PROXY": "${localEnv:HTTP_PROXY}",
       "http_proxy": "${localEnv:HTTP_PROXY}",
-      "https_proxy": "${localEnv:HTTP_PROXY}"
+      "https_proxy": "${localEnv:HTTP_PROXY}",
+      "GOWORK": "/workspaces/goProbe/go.work"
     }
   },
   "customizations": {
