--- a/examples/config/goprobe-example-config-devcontainer.yaml
+++ b/examples/config/goprobe-example-config-devcontainer.yaml
@@ -14,6 +14,9 @@ api:
   addr: 0.0.0.0:8145
   profiling: true
   metrics: true
+  query_rate_limit:
+    max_req_per_sec: 2
+    max_burst: 2
 logging:
   level: debug
   encoding: logfmt
