--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -37,6 +37,8 @@ jobs:
           GOOS=linux GOARCH=amd64 go build -a -o gpctl -pgo=auto ./cmd/gpctl
           GOOS=linux GOARCH=amd64 go build -a -o goConvert ./cmd/goConvert
 
+
+
       - name: Deploy artifacts
         run: |
           mkdir -p .debpkg/usr/local/bin
@@ -150,7 +152,7 @@ jobs:
 
   build-apk:
     runs-on: ubuntu-latest
-    container: golang:alpine
+    container: golang:1.22-alpine3.19
     steps:
 
       - name: Set environment
@@ -177,6 +179,7 @@ jobs:
           GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -o gpctl -pgo=auto ./cmd/gpctl
           GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -o goConvert ./cmd/goConvert
 
+
       - name: Deploy artifacts
         run: |
           tar czf ./goprobe_${{ env.RELEASE_VERSION }}_alpine_x86_64.tar.gz goProbe global-query goQuery gpctl goConvert
@@ -190,7 +193,7 @@ jobs:
 
   build-openapi-specs:
     runs-on: ubuntu-latest
-    container: node:20-alpine
+    container: golang:1.22-alpine3.19
     steps:
         - name: Set environment
           run: |
@@ -201,14 +204,10 @@ jobs:
         - name: Check out code into the Go module directory
           uses: actions/checkout@v4
 
-        - name: Install redocly
-          run: |
-            npm install -g @redocly/cli
-
         - name: Build single OpenAPI 3.0 spec file for all documented APIs
           run: |
-            redocly bundle --output ./goprobe_${{ env.RELEASE_VERSION }}_openapi.yaml ./pkg/api/goprobe/spec/openapi.yaml
-            redocly bundle --output ./global-query_${{ env.RELEASE_VERSION }}_openapi.yaml ./pkg/api/globalquery/spec/openapi.yaml
+            go run ./cmd/goProbe/goProbe.go -config .buildconfig/goprobe.yaml -openapi.spec-outfile ./goprobe_${{ env.RELEASE_VERSION }}_openapi.yaml
+            go run ./cmd/global-query/main.go --config .buildconfig/global-query.yaml --openapi.spec-outfile ./global-query_${{ env.RELEASE_VERSION }}_openapi.yaml
 
         - name: Store artifacts
           uses: actions/upload-artifact@v3
