--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    # TODO: Fix Release version once on tag only
       - name: Set environment
         run: |
-          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
-          echo "SEM_VER=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+          echo "RELEASE_VERSION=v4.1.21-rc" >> $GITHUB_ENV
           echo "COMMIT_SHA=${GITHUB_SHA}" >> $GITHUB_ENV
-
+    # TODO: Enable once variable / secret is available
     #   - name: Login to Docker Hub
     #     uses: docker/login-action@v3
     #     with:
