--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -19,7 +19,7 @@ jobs:
     #   - name: Login to Docker Hub
     #     uses: docker/login-action@v3
     #     with:
-    #       username: ${{ vars.DOCKERHUB_USERNAME }}
+    #       username: goprobe
     #       password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up QEMU
@@ -32,10 +32,10 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: false
-          tags: goprobe/sensor:${{ env.RELEASE_VERSION }},goprobe/sensor:latest
+          tags: goprobe/sensor:${{ env.COMMIT_SHA }},goprobe/sensor:${{ env.RELEASE_VERSION }},goprobe/sensor:latest
 
       - name: Build and push query image
         uses: docker/build-push-action@v6
         with:
           push: false
-          tags: goprobe/query:${{ env.RELEASE_VERSION }},goprobe/query:latest
+          tags: goprobe/query:${{ env.COMMIT_SHA }},goprobe/query:${{ env.RELEASE_VERSION }},goprobe/query:latest
