--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-docker:
     runs-on: ubuntu-latest
+    environment: prod
     steps:
 
     # TODO: Fix Release version once on tag only
