--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,8 +2,8 @@ name: Build Docker Images
 
 on:
   push:
-#    tags:
-#      - 'v*.*.*'
+   tags:
+     - 'v*.*.*'
 
 jobs:
   build-docker:
@@ -11,10 +11,9 @@ jobs:
     environment: prod
     steps:
 
-    # TODO: Fix Release version once on tag only
       - name: Set environment
         run: |
-          echo "RELEASE_VERSION=v4.1.21-rc" >> $GITHUB_ENV
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
           echo "COMMIT_SHA=${GITHUB_SHA}" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
