--- a/.github/workflows/ci-push.yml
+++ b/.github/workflows/ci-push.yml
@@ -22,4 +22,4 @@ jobs:
       run: GOOS=linux GOARCH=amd64 go build -tags jsoniter -v ./...
 
     - name: Test
-      run: go test -tags jsoniter -v ./...
+      run: go test -tags jsoniter -skip-benchmarks -v ./...
